templates/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-postgres
  labels:
    app: backend-postgres
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backend-postgres
  template:
    metadata:
      labels:
        app: backend-postgres
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backend-postgres-data
      containers:
        - name: backend-postgres
          image: postgres:13-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
---
apiVersion: v1
kind: Service
metadata:
  name: backend-postgres
spec:
  ports:
    - name: psql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: backend-postgres
