templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-born
    cert-manager.io/issue-temporary-certificate: "false"
spec:
  tls:
    - hosts:
        - api.woog.life
      secretName: backend-cert
  rules:
    - host: api.woog.life
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  name: http
            path: /
            pathType: Prefix
